--- a/_posts/2019-09-15-smali和逆向.md
+++ b/_posts/2019-09-15-smali和逆向.md
@@ -32,10 +32,10 @@ tags:
 
 * 然后就会在当前文件夹中生成**classes-dex2jar.jar**
 
-  ![1568537121003](img/2019-09-15-1.jpg)
+  ![](/img/2019-09-15-1.jpg)
 
 * 然后用**jd-gui**打开，即可查看源码
-  ![1568537247612](img/2019-09-15-2.jpg)
+  ![1568537247612](/img/2019-09-15-2.jpg)
 
 ## 2.修改java源码
 
@@ -49,7 +49,7 @@ apktool.jar d test.apk
 
 然后会在当前目录生成test目录，目录内容大体如下：
 
-![1568537520908](img/2019-09-15-1.jpg)
+![1568537520908](/img/2019-09-15-1.jpg)
 
 然后就可以通过修改smali目录下相应的文件了
 
