--- a/_posts/2019-10-26-git使用.md
+++ b/_posts/2019-10-26-git使用.md
@@ -38,9 +38,9 @@ git reset \<commit> 其实就是让版本仓库的内容同步到暂存区
 git reset --hard \<commit> 其实是让版本仓库的内容同步到暂存区和工作区，注意，这个时候工作区新增的文件不会被删除
 
 
-![](https://user-gold-cdn.xitu.io/2019/10/26/16e08a10fffee38c?w=488&h=353&f=png&s=10136)
+![](https://raw.githubusercontent.com/roger1245/ImgBed/master/img/2019-10-26.jpg)
 
-### 1.1reset 
+#### 1.1 reset 
 
 git reset --soft  HEAD~ 只是将版本仓库的tree的指针指向HEAD的父节点，而不会改变暂存区和工作区
 
@@ -92,7 +92,7 @@ git log 显示版本库提交日志
 
 
 
-### git 出现:号
+### 3.  git 出现:号
 
 表示还有未显示的内容，可以继续按回车键查看，或者按q退出
 
